# nwchem-sort-trajectory

./: CMakeLists.txt  README.md  adios2.xml  nwchem-dump-streamer-local.cpp  nwchem-sort-trajectory-global.cpp  nwchem-sort-trajectory-local.cpp  nwchem-sort-trajectory.cpp  testStream.cpp
trypsin_md_trj_nwchem.bp/: md.0  md.idx  profiling.json
